Adding DWTargetFollowSteering.cs to version control. Class improved with almost all values being user customizable

--- a/Assets/com.darkwing-games.core/Runtime/CoordinatedMovement/CoordinateMovementAssembly.asmdef
+++ b/Assets/com.darkwing-games.core/Runtime/CoordinatedMovement/CoordinateMovementAssembly.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Darkwing-games-core",
-    "rootNamespace": "DWGames",
+    "name": "CoordinateMovementAssembly",
+    "rootNamespace": "DWGames.CoordinatedMovement",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
