Adding physics abstraction layer for unit testing

--- a/Assets/EditModeTests/EditModeTests.asmdef
+++ b/Assets/EditModeTests/EditModeTests.asmdef
@@ -1,10 +1,26 @@
 {
     "name": "EditModeTests",
-    "optionalUnityReferences": [
-        "TestAssemblies"
+    "rootNamespace": "",
+    "references": [
+        "GUID:ce625657a452a794aaa71efe7c11753c",
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:0acc523941302664db1f4e527237feb3"
     ],
     "includePlatforms": [
         "Editor"
     ],
-    "references":[ "GUID:ce625657a452a794aaa71efe7c11753c" ]
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "NSubstitute.dll",
+        "nunit.framework.dll",
+        "Castle.Core.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
